<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgColor"
            android:fillViewport="true"
            android:transitionName="shared_container"
            tools:context=".AddTaskFragment">

        <RelativeLayout
                android:id="@+id/parentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/xsPadding"
                android:paddingTop="@dimen/sPadding"
                android:paddingEnd="@dimen/xsPadding"
                android:paddingBottom="@dimen/xxlPadding">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:background="@color/colorPrimary"
                    app:title=" " />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput1"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/toolbar"
                    android:layout_margin="@dimen/normalMargin"
                    android:hint="@string/task"
                    app:boxStrokeColor="@color/colorAccent"
                    app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_task"
                        android:drawablePadding="@dimen/drawablePadding"
                        android:inputType="textCapSentences"
                        android:textSize="@dimen/lTextSize"
                        android:transitionName="emailLoginTransition" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput2"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textInput1"
                    android:layout_margin="@dimen/normalMargin"
                    android:hint="@string/description"
                    app:boxStrokeColor="@color/colorAccent"
                    app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_description"
                        android:drawablePadding="@dimen/drawablePadding"
                        android:inputType="text"
                        android:textSize="@dimen/lTextSize"
                        android:transitionName="emailLoginTransition" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:id="@+id/remind_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textInput2"
                    android:layout_marginTop="@dimen/lMargin"
                    android:gravity="center"
                    android:padding="@dimen/xlPadding">

                <ImageView
                        android:id="@+id/imgal"
                        android:layout_width="@dimen/reminderImageSize"
                        android:layout_height="@dimen/reminderImageSize"
                        android:contentDescription="@string/reminder_image"
                        android:src="@drawable/ic_remind" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/lMargin"
                        android:text="@string/remind_me"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/lTextSize" />

                <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/HasRemind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/xlMargin" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/EnterDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remind_layout"
                    android:layout_marginTop="@dimen/normalMargin"
                    android:gravity="center"
                    android:padding="@dimen/normalMargin"
                    android:visibility="invisible">

                <EditText
                        android:id="@+id/EnterDate"
                        android:layout_width="@dimen/editTextWidth"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/lMargin"
                        android:focusable="false"
                        android:autofillHints="no"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:hint="@string/date"
                        android:inputType="date"
                        android:textIsSelectable="false" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/lMargin"
                        android:layout_marginTop="@dimen/xsMargin"
                        android:text="@string/at"
                        android:textSize="@dimen/lTextSize" />

                <EditText
                        android:id="@+id/EnterTime"
                        android:layout_width="@dimen/editTextWidth"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/normalMargin"
                        android:focusable="false"
                        android:autofillHints="no"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:hint="@string/time"
                        android:inputType="date"
                        android:textIsSelectable="false" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/EnterDateTime"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/create_task"
                    android:textColor="@color/colorPrimary"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/cornerRadius"
                    app:elevation="@dimen/zeroElevation"
                    app:iconTint="@color/colorPrimary"
                    app:icon="@drawable/ic_create" />

        </RelativeLayout>
    </ScrollView>
</layout>

