<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/bgColor"
        android:padding="@dimen/xlPadding">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:enabled="false"
                    android:text="@string/task"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/lTextSize"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    app:backgroundTint="@color/textColor"/>

            <TextView
                    android:id="@+id/edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/normalTextSize" />
        </LinearLayout>

        <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/textColor"
                android:autofillHints="no"
                android:textSize="@dimen/normalTextSize"
                tools:text="@string/exampleText"
                tools:ignore="LabelFor,TextFields" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/xsMargin"
            android:layout_marginTop="@dimen/sMargin">

        <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/normalTextSize"
                android:textColor="@color/textColor"
                tools:text="@string/exampleText" />

        <TextView
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="@dimen/normalTextSize"
                tools:text="@string/exampleText" />
    </LinearLayout>

    <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sMargin"
            android:background="@color/colorAccent"
            android:text="@string/button_save"
            android:textColor="@color/icons"
            android:visibility="gone" />

</LinearLayout>