<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coodLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgColor"
            tools:context=".fragments.MainFragment">

        <RelativeLayout
                android:id="@+id/parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:background="@color/colorPrimary"
                    app:title=" ">

                <TextView
                        android:id="@+id/title"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/pacifico"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/xlTextSize" />

            </androidx.appcompat.widget.Toolbar>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/toolbar"
                    android:layout_alignParentBottom="true"
                    tools:listitem="@layout/row_layout" />

            <LinearLayout
                    android:id="@+id/empty_ph"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                <ImageView
                        android:layout_width="@dimen/noDataImageSize"
                        android:layout_height="@dimen/noDataImageSize"
                        android:src="@drawable/empty_view_bg"
                        android:contentDescription="@string/image" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sMargin"
                        android:text="@string/empty_ph"
                        android:textSize="@dimen/lTextSize" />
            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/pencil_image"
                android:layout_margin="@dimen/normalMargin"
                android:transitionName="shared_container"
                app:backgroundTint="@color/colorAccent"
                app:srcCompat="@drawable/ic_create" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>