<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                android:id="@+id/parentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="32dp"
                android:paddingTop="32dp"
                android:paddingEnd="32dp"
                android:weightSum="4.7"
                tools:context=".NewTaskFragment">

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight=".75"
                    android:hint="@string/task"
                    app:boxStrokeColor="@color/colorAccent"
                    app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_task"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:textSize="18sp"
                        android:transitionName="emailLoginTransition" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight=".7"
                    android:hint="@string/description"
                    app:boxStrokeColor="@color/colorAccent"
                    app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_description"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:textSize="18sp"
                        android:transitionName="emailLoginTransition" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2"
                    android:gravity="center">

                <ImageView
                        android:id="@+id/imgal"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_remind" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:text="Remind me"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                <Switch
                        android:id="@+id/HasRemind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/EnterDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1.6"
                    android:visibility="invisible">

                <EditText
                        android:id="@+id/EnterDate"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:hint="Date"
                        android:inputType="date"
                        android:textIsSelectable="false" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="\@"
                        android:textSize="20sp" />

                <EditText
                        android:id="@+id/EnterTime"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:hint="Time"
                        android:inputType="date"
                        android:textIsSelectable="false" />

            </LinearLayout>

            <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight=".1"
                    android:background="@drawable/rounded_shape"
                    android:text="@string/create_task"
                    android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </ScrollView>
</layout>


